--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.3.2",
-    "description": "Disco Elysium-style internal voices with status effects, skill checks, and chat injection. Voices appear directly in chat below AI messages."
+    "version": "0.3.3",
+    "description": "Disco Elysium-style internal voices with status effects, skill checks, and chat injection."
 }
