--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.2.3",
-    "description": "Disco Elysium-style internal voices that comment on your roleplay with distinct personalities and skill checks. Now with chat injection!",
+    "version": "0.2.4",
+    "description": "Disco Elysium-style internal voices with status effects, ancient voices, and chat injection!",
     "auto_update": false
 }
