--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.2.4",
-    "description": "Disco Elysium-style internal voices with status effects, ancient voices, and chat injection!",
+    "version": "0.2.5",
+    "description": "Disco Elysium-style internal voices with status effects, ancient voices, POV control, and auto-detection!",
     "auto_update": false
 }
