--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.3.3",
-    "description": "Disco Elysium-style internal voices with status effects, ancient voices, POV control, character context, and auto-detection!",
+    "version": "0.3.4",
+    "description": "Disco Elysium-style internal voices with status effects, ancient voices, POV control, and draggable icon!",
     "auto_update": false
 }
