--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.3.4",
-    "description": "Disco Elysium-style internal voices with status effects, ancient voices, POV control, and draggable icon!",
+    "version": "0.4.0",
+    "description": "Disco Elysium-style internal voices - now with reactive chorus mode where voices interact and argue with each other!",
     "auto_update": false
 }
