--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "js": "index.js",
     "css": "style.css",
     "author": "Judas",
-    "version": "0.4.2",
-    "description": "Disco Elysium-style internal voices with canon-accurate Ancient Voices and toast notifications!",
+    "version": "0.5.0",
+    "description": "Disco Elysium-style internal voices with trigger delay, persona profiles, and the Thought Cabinet!",
     "auto_update": false
 }
