--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "display_name": "Inland Empire",
-    "loading_order": 100,
+    "loading_order": 150,
     "requires": [],
     "optional": [],
     "js": "index.js",
-    "css": "",
+    "css": "style.css",
     "author": "Judas",
-    "version": "0.7.1",
-    "homePage": "",
+    "version": "0.7.0",
+    "description": "Disco Elysium-style internal voices with Thought Cabinet, theme tracking, and skill caps!",
     "auto_update": false
 }
